[package]
name = "artnet_reciever"
description = "A simple artnet reciever based on the artnet_protocol crate"
authors = ["David Bühler"]
license = "MIT"
repository="https://github.com/daveiator/artnet_reciever"
keywords = ["artnet", "dmx", "lighting"]
categories = ["multimedia"]
edition = "2021"

version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artnet_protocol = "0.4.1"
socket2 = { version = "0.5.2", features = ["all"] }
